# python_todoapi

./: Dockerfile.dev  compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
tests/: test_todo.py
todoapp/: main.py  setting.py
