[tool.poetry]
name = "todoapp"
version = "0.1.0"
description = ""
authors = ["kingpin147 <nomiking0072012@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
psycopg = "^3.1.19"
pytest = "^8.2.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
